# flash-commit

./: .gitignore  README.md  flash_commit.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
flash_commit/: __init__.py  flash_commit.py
