[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "flash_commit"
version = "0.0.1"
authors = [
  { name="KuaqSon", email="qson.ng@gmail.com" },
]
description = "Automatically generate commit messages using ChatGPT"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/KuaqSon/flash-commit"
"Bug Tracker" = "https://github.com/KuaqSon/flash-commit/issues"
